# g1-state-estimation

./: .gitignore  .gitmodules  A2_SIMULATION_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALL_SDK2PY.md  MAPPING_IMPROVEMENTS_V2.md  MAPPING_README.md  MUJOCO_LOG.TXT  PRE_DEPLOYMENT_REVIEW.md  README.md  STATUS_UPDATE.md  WALL_DETECTION.md  build.sh  check_a2_urdf.py  convert_a2_to_mujoco.py  convert_recording_to_pcd.py  demo_a2_flip_simulation.py  demo_b2_flip_simulation.py  direct_a2_flip.py  direct_a2_flip_official.py  download_meshes.py  export_trajectory.py  g1_aggressive_step.py  g1_breadcrumb_follower.py  g1_mid360_config.json  g1_network_viz.py  g1_prone_to_stand.py  g1_recovery_strategies.py  g1_rigid_upper.py  g1_state_publisher.py  ground_robot_debug.py  ground_robot_fixed.txt  map_3d.pcd  point_cloud_to_walls.py  quick_test_walls.py  run_node.sh  setup_a2_mujoco.md  test_pose_receiver.py  test_wall_detection.py
full-scan/: NEXT_STEPS.md  check_pc_pointlio.sh  run_pc_pointlio.sh
g1_slam_nav/: .gitattributes  README.md  build.sh  cyclonedds_peer.xml
g1_slam_nav/config/: MID360_config.json
g1_slam_nav/docs/: COPY_TO_JETSON.md  FOXGLOVE_SETUP.md  G1_JETSON_ARCHITECTURE.md  POINT_LIO_JETSON.md  SLAM_REVIEW_AND_ALTERNATIVES.md  WEB_VIZ_ALTERNATIVES.md
g1_slam_nav/scripts/: point_lio_client.sh  point_lio_livox.sh  point_lio_mapping.sh  point_lio_start.sh
g1_slam_nav/src/g1_bringup/: CMakeLists.txt  package.xml
g1_slam_nav/src/g1_bringup/config/: g1_robot.yaml  go2_robot.yaml  point_lio_mid360.yaml
g1_slam_nav/src/g1_bringup/launch/: cmd_vel_domain_relay.launch.py  g1_full.launch.py  g1_nav_only.launch.py  g1_slam_only.launch.py  g1_viz.launch.py  go2_full.launch.py  point_lio_foxglove.launch.py  point_lio_mapping.launch.py  point_lio_navigation.launch.py  point_lio_pc_mapper.launch.py
g1_slam_nav/src/g1_bringup/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
g1_slam_nav/src/g1_bringup/rviz/: README.md  g1_default.rviz  point_lio.rviz
g1_slam_nav/src/g1_bringup/scripts/: cmd_vel_domain_relay.py  cmd_vel_to_unitree.py  point_lio_odom_to_tf.py  publish_robot_description.py
g1_slam_nav/src/g1_bringup/urdf/: g1_minimal.urdf
g1_slam_nav/src/g1_msgs/: CMakeLists.txt  package.xml
g1_slam_nav/src/g1_msgs/msg/: NavigationCommand.msg  RobotState.msg  SlamStatus.msg  WaypointList.msg
g1_slam_nav/src/g1_msgs/srv/: LoadMap.srv  SaveMap.srv  SetWaypoints.srv
g1_slam_nav/src/g1_navigation/: CMakeLists.txt  package.xml
g1_slam_nav/src/g1_navigation/launch/: navigation.launch.py
g1_slam_nav/src/g1_navigation/params/: nav2_params.yaml  nav2_params_point_lio.yaml
g1_slam_nav/src/g1_navigation/src/: nav_command_node.cpp
g1_slam_nav/src/g1_sensor_bridge/: CMakeLists.txt  package.xml
g1_slam_nav/src/g1_sensor_bridge/config/: g1_sensor_params.yaml
g1_slam_nav/src/g1_sensor_bridge/include/g1_sensor_bridge/: leg_odometry.hpp  livox_bridge.hpp  unitree_bridge.hpp
g1_slam_nav/src/g1_sensor_bridge/launch/: sensor_bridge.launch.py
g1_slam_nav/src/g1_sensor_bridge/src/: leg_odometry_node.cpp  livox_bridge_node.cpp  unitree_bridge_node.cpp
g1_slam_nav/src/g1_slam/: CMakeLists.txt  package.xml
g1_slam_nav/src/g1_slam/config/: slam_params.yaml
g1_slam_nav/src/g1_slam/include/g1_slam/: ekf_fusion.hpp  kiss_icp_wrapper.hpp  loop_closure.hpp  pose_graph.hpp  voxel_hash_map.hpp
g1_slam_nav/src/g1_slam/launch/: slam.launch.py
g1_slam_nav/src/g1_slam/src/: ekf_fusion.cpp  kiss_icp_wrapper.cpp  loop_closure.cpp  map_manager_node.cpp  occupancy_grid_node.cpp  point_lio_occupancy_grid_node.cpp  pose_graph.cpp  slam_node.cpp  voxel_hash_map.cpp
g1_slam_nav/src/g1_web_interface/: DEPLOY.md  livox_to_pc2_node.py  package.xml  setup.cfg  setup.py
g1_slam_nav/src/g1_web_interface/frontend/: index.html  package-lock.json  package.json  vite.config.ts
g1_slam_nav/src/g1_web_interface/frontend/src/: App.tsx
g1_slam_nav/src/g1_web_interface/frontend/src/components/: ControlPanel.tsx  FullMap3D.tsx  LidarPanel.tsx  MapCanvas.tsx  NearScan3D.tsx  StatusPanel.tsx
g1_slam_nav/src/g1_web_interface/frontend/src/hooks/: useWebSocket.ts
g1_slam_nav/src/g1_web_interface/frontend/src/types/: index.ts
g1_slam_nav/src/g1_web_interface/g1_web_interface/: web_bridge_node.py
g1_slam_nav/src/g1_web_interface/launch/: web_interface.launch.py
src/: CMakeLists.txt  G1Kinematics.cpp  G1Kinematics.hpp  G1Localizer.cpp  G1Localizer.hpp  ICP2D.cpp  ICP2D.hpp  LiDARRecorder.cpp  LiDARRecorder.hpp  LivoxInterface.cpp  LivoxInterface.hpp  PoseGraph.cpp  PoseGraph.hpp  RealsenseInterface.hpp  ScanMatcher.cpp  ScanMatcher.hpp  SimpleTCPServer.hpp  StateEstimator.cpp  StateEstimator.hpp  StatePublisher.hpp  UDPPublisher.cpp  UDPPublisher.hpp  UnitreeInterface.cpp  UnitreeInterface.hpp  g1_lidar_recorder.cpp  g1_lidar_visualizer_main.cpp  g1_localization_node.cpp  g1_localizer_viz.cpp  g1_web_viz_node.cpp  main.cpp
tests/: mock_test.cpp  test_livox.cpp  test_realsense.cpp  test_unitree.cpp
viz/: g1_viz.py  index.html
